test/fixtures/diagnostics/type-checker/positive/union-match-discard/input.tysh
namespace Samples.TypeChecker.UnionMatchDiscard

union PaymentStatus {
  Pending
  Paid(at: string)
  Failed(reason: string)
}

fun describe(status: PaymentStatus): string =
  match status {
    Pending => "Waiting"
    _ => "Settled"
  }
