test/fixtures/diagnostics/type-checker/negative/invalid-union-match-case/input.tysh
namespace Samples.Match.InvalidUnionCase

union PaymentStatus {
  Pending
  Paid(at: string)
}

fun describe(status: PaymentStatus): string =
  match status {
    Pending => "Waiting"
    Refunded => "Refunded"
    Paid(at) => at
  }
